# FinTrack

./: .env  docker-compose.yml
backend/: .dockerignore  .env  .env.dev  .env.prod  .gitignore  Dockerfile  alembic.ini  docker.env  pyproject.toml  run.sh  start.sh
backend/app/: main.py
backend/app/api/: routers.py
backend/app/api/dependencies/: analytics_dep.py  auth_dep.py  category_dep.py  limiter.py  repo_dep.py  transaction_dep.py
backend/app/api/errors/: exceptions.py
backend/app/api/routers/: routers.py
backend/app/auth/: repository.py  router.py  service.py
backend/app/auth/schemas/: requests.py  responses.py
backend/app/auth/utils/: cookie_handler.py  jwt_handler.py  password_handler.py  password_validator.py
backend/app/core/: events.py  logging.py
backend/app/core/security/: hashing.py  tokens.py
backend/app/core/settings/: app.py  base.py
backend/app/db/: database.py  db_events.py  events.py  redis_events.py  repository.py
backend/app/db/migrations/: env.py
backend/app/db/models/: base.py  models.py
backend/app/email/: router.py  service.py
backend/app/email/utils/: email_handler.py
backend/app/finance/analytics/: repository.py  router.py  service.py
backend/app/finance/categories/: repository.py  router.py  service.py
backend/app/finance/transactions/: repository.py  router.py  service.py
backend/app/modules/auth/: dependencies.py  router.py  schema.py  service.py
backend/app/modules/users/: model.py  schema.py  service.py
backend/app/users/: router.py
backend/app/users/schemas/: responses.py
(+14 files in other folders)
